--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -48,7 +48,7 @@ a { text-decoration: none; color: inherit; }
 
 .brand-name {
     font-size: 1.2rem;
-    font-weight: 800;
+    font-weight: bold;
     color: var(--primary-dark);
     text-transform: uppercase;
 }
@@ -58,7 +58,7 @@ a { text-decoration: none; color: inherit; }
 .nav-links li a {
     padding: 8px 16px;
     font-size: 0.85rem;
-    font-weight: 600;
+    font-weight: bold;
     color: var(--primary-dark);
     border-radius: var(--btn-radius);
     transition: var(--transition);
@@ -75,7 +75,7 @@ a { text-decoration: none; color: inherit; }
 .select-trigger { padding: 6px 10px; background: #F5F5F5; border-radius: var(--btn-radius); font-size: 0.75rem; font-weight: 700; display: flex; align-items: center; justify-content: space-between; }
 .select-options { position: absolute; top: calc(100% + 10px); right: 0; background: var(--white); border-radius: var(--btn-radius); box-shadow: 0 10px 25px rgba(0,0,0,0.1); overflow: hidden; opacity: 0; visibility: hidden; transform: translateY(-10px); transition: var(--transition); min-width: 70px; }
 .custom-select.open .select-options { opacity: 1; visibility: visible; transform: translateY(0); }
-.option { padding: 8px; font-size: 0.75rem; text-align: center; font-weight: 600; }
+.option { padding: 8px; font-size: 0.75rem; text-align: center; font-weight: bold; }
 .option:hover { background: var(--primary-dark); color: var(--white); }
 
 
@@ -85,7 +85,7 @@ a { text-decoration: none; color: inherit; }
 
 .footer-logo { display: flex; align-items: center; gap: 10px; margin-bottom: 20px; }
 .footer-logo img { height: 35px; }
-.logo-text { font-size: 1.1rem; font-weight: 800; color: var(--primary-dark); letter-spacing: 0.5px; }
+.logo-text { font-size: 1.1rem; font-weight: bold; color: var(--primary-dark); letter-spacing: 0.5px; }
 
 .company-desc { font-size: 0.85rem; color: var(--text-light-gray); line-height: 1.6; }
 .footer-title { font-size: 0.95rem; font-weight: 700; color: var(--primary-dark); margin-bottom: 25px; }
@@ -101,11 +101,15 @@ a { text-decoration: none; color: inherit; }
 
 .body-page{
     padding: 20px;
+
     background: linear-gradient(
-            90deg,
+            180deg,
             #F7F2EE 0%,
+            #FFFFFF 50%,
             #F2E2D5 100%
     );
+
+
     color: #513C2E;
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 }
