--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -30,7 +30,7 @@
 
 .contact-left-title {
     font-size: 20px;
-    font-weight: 800;
+    font-weight: bold;
     margin-bottom: 8px;
 }
 
@@ -75,7 +75,7 @@
 
 .contact-form-title {
     font-size: 20px;
-    font-weight: 800;
+    font-weight: bold;
     margin-bottom: 6px;
 }
 
