--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,22 +1,69 @@
 /* ===============================
    HOME HERO
 ================================ */
+.hero-about {
+    padding: 40px 0 20px 0;
+}
+
 .home-hero {
-    padding: 80px 0 120px;
-    background: #000;
+    max-width:100%;
+    background: linear-gradient(
+            270deg,
+            #F7F2EE 0%,
+            #FFFFFF 50%,
+            #f1e8e0 100%
+    );
+    border: 1px solid #e3d9d1;
 }
 
 .hero-box {
-    background: url("../../assets/images/about_background.png") center/cover no-repeat;
-    border-radius: 16px;
-    padding: 60px;
+    padding: 48px 40px;
+    color: #fff;
     position: relative;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.35);
+    background: linear-gradient(to right, rgb(110 85 65 / 0%), rgb(140 110 85 / 73%)), url(../../assets/images/about_background.png);
+    background-size: cover;
+    margin: 0 auto 50px;
+    border-radius: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.35);
 }
 
+.btn-hero {
+    padding: 10px 20px;
+    border-radius: var(--btn-radius);
+    font-size: 0.95rem;
+    font-weight: bold;
+    transition: var(--transition);
+    display: inline-block;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-contact-hero {
+    background: rgba(255, 255, 255, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    color: var(--white);
+    backdrop-filter: blur(5px);
+}
+.btn-contact-hero:hover { background: rgba(255, 255, 255, 0.25); transform: translateY(-2px); }
+
+.btn-catalog-hero {
+    background: var(--grad-hero-btn);
+    color: var(--white);
+}
+.btn-catalog-hero:hover { transform: translateY(-2px); box-shadow: 0 5px 15px rgba(0,0,0,0.2); }
+
 .hero-content {
+    font-weight: bold;
     max-width: 520px;
     color: #fff;
+}
+
+.font-color-linear{
+    background: linear-gradient(318deg, #FFFFFF 0%, #bc885e 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
 .hero-content h1 {
@@ -38,20 +85,26 @@
 }
 
 .hero-stats {
-    margin-top: -40px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
 }
 
 .stat-item {
-    background: #fff;
+    background: linear-gradient(
+            135deg,
+            #FFFFFF 0%,
+            #f4e7d9 100%
+    );
     border-radius: 12px;
     padding: 18px;
     text-align: center;
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 }
-
+.stat-item:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 16px rgba(0,0,0,.08);
+}
 .stat-item strong {
     font-size: 24px;
     display: block;
@@ -66,23 +119,56 @@
 /* ===============================
    SECTION COMMON
 ================================ */
-.home-section {
-    padding: 90px 0;
-    background: #faf7f4;
+
+.section-highlight{
+    background: linear-gradient(135deg, #746456 0%, #BEA48E 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
-.home-section.vision {
-    background: #fff;
+.home-section {
+    border: 1px solid #e3d9d1;
+    padding: 90px 0;
+    background: linear-gradient(
+            135deg,
+            #F7F2EE 0%,
+            #FFFFFF 50%,
+            #f1e8e0 100%
+    );
 }
 
 .section-tag {
-    display: inline-block;
+    margin-bottom: 24px;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+
+    padding: 3px 7px;
+    border-radius: 999px;
+
     font-size: 12px;
-    font-weight: 600;
+    font-weight: bold;
     letter-spacing: 1px;
-    color: #8b6a4f;
-    margin-bottom: 12px;
+    text-transform: uppercase;
+
+    background: linear-gradient(
+            180deg,
+            rgba(116, 100, 86, 0.1) 00%,
+            rgba(190, 164, 142, 0.2) 100%
+    );
+
+    border: 1px solid #e3d9d1;
 }
+
+.section-tag img {
+    width: 16px;
+    height: 16px;
+    display: block;
+}
+
 
 .home-section h2 {
     font-size: 32px;
@@ -93,7 +179,7 @@
 .home-section p {
     font-size: 15px;
     line-height: 1.7;
-    color: #555;
+    color: rgba(81, 60, 46, 0.7);
 }
 
 /* ===============================
@@ -106,13 +192,7 @@
     align-items: center;
 }
 
-.two-col.reverse {
-    grid-template-columns: 1fr 1fr;
-}
 
-.two-col.reverse .image {
-    order: -1;
-}
 
 .two-col img {
     width: 100%;
@@ -124,13 +204,19 @@
    ADVANTAGES
 ================================ */
 .home-advantages {
-    background: #000;
-    padding: 100px 0;
     text-align: center;
+    border: 1px solid #e3d9d1;
+    padding: 90px 0;
+    background: linear-gradient(
+            135deg,
+            #F7F2EE 0%,
+            #FFFFFF 50%,
+            #f1e8e0 100%
+    );
 }
 
 .home-advantages h2 {
-    color: #d7b99a;
+
     font-size: 32px;
     margin-bottom: 12px;
 }
@@ -147,19 +233,29 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 28px;
 }
-
 .advantage-card {
+    border: 1px solid rgb(193, 183, 175);
     background: #fff;
     border-radius: 16px;
     padding: 28px;
     text-align: left;
+
     box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+    transition:
+            transform 0.25s ease,
+            box-shadow 0.25s ease;
 }
+
+.advantage-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 20px 45px rgba(0,0,0,0.35);
+}
+
 
 .advantage-card h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: #3b2a1f;
+    font-weight: bold;
 }
 
 .advantage-card p {
@@ -171,13 +267,15 @@
 /* ===============================
    CTA
 ================================ */
-.home-cta {
-    padding: 120px 0;
-    background: #000;
-}
 
 .cta-box {
-    background: #faf7f4;
+    margin-top: 100px;
+    background: linear-gradient(
+            135deg,
+            #F7F2EE 0%,
+            #FFFFFF 50%,
+            #f1e8e0 100%
+    );
     border-radius: 20px;
     padding: 60px;
     text-align: center;
@@ -197,12 +295,48 @@
     margin: 0 auto 28px;
 }
 
-.cta-actions {
-    display: flex;
-    justify-content: center;
-    gap: 14px;
+.section-top{
+    padding-bottom: 40px;
+    border: none;
+    border-bottom: 1px solid transparent;
+
+    border-image: linear-gradient(
+            to right,
+            rgba(188,114,51,0) 0%,
+            rgba(191, 153, 125, 0.6) 50%,
+            rgba(188,114,51,0) 100%
+    ) 1;
+}
+.col-text{
+    padding-bottom: 20px;
+    border: none;
+    border-bottom: 1px solid transparent;
+
+    border-image: linear-gradient(
+            to right,
+            rgb(135, 110, 88) 0%,
+            rgba(139,106,79,0) 100%
+    ) 1;
 }
 
+.cta-actions {
+    display: inline-flex;
+    width: auto;
+    justify-content: center;
+    gap: 14px;
+    text-align: center;
+    padding: 9px 16px;
+    background: linear-gradient(272deg, #513C2E 0%, #746456 100%);
+    border-radius: 8px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #fff;
+    transition: background 0.2s ease;
+}
+
+.cta-actions:hover {
+    transform: translateY(-6px);
+}
 /* ===============================
    RESPONSIVE
 ================================ */
@@ -216,10 +350,6 @@
         gap: 40px;
     }
 
-    .two-col.reverse .image {
-        order: 0;
-    }
-
     .advantage-grid {
         grid-template-columns: 1fr;
     }
@@ -227,18 +357,22 @@
 
 @media (max-width: 576px) {
     .hero-box {
-        padding: 40px 24px;
+
     }
 
     .hero-content h1 {
-        font-size: 28px;
+        font-size: 26px;
     }
 
     .home-section h2 {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     .cta-box {
+        margin-top: 90px;
         padding: 40px 24px;
+    }
+    .hero-about {
+        padding: 20px 0 10px 0;
     }
 }
